fix one test in rules provider